--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,27 @@
-requests>=2.28.0
-beautifulsoup4>=4.11.0
-lxml>=4.9.0
-colorama>=0.4.5
-rich>=12.5.0
-click>=8.1.0
-pydantic>=1.10.0
+# Core dependencies
 aiohttp>=3.8.0
-asyncio-mqtt>=0.11.0
+asyncio>=3.4.3
+beautifulsoup4>=4.9.3
+jinja2>=3.0.0
+markdown>=3.3.0
+ollama>=0.1.0
+pyyaml>=6.0
+requests>=2.26.0
+rich>=10.0.0
+
+# Security tools
+dnspython>=2.1.0
 python-nmap>=0.7.1
-python-whois>=0.8.0
-dnspython>=2.2.0
-validators>=0.20.0
-urllib3>=1.26.0
-aiofiles>=23.1.0
-aiodns>=3.0.0
-cryptography>=41.0.0
-pyOpenSSL>=23.2.0
-python-dotenv>=1.0.0
-typing-extensions>=4.7.0 
+wfuzz>=3.1.0
+
+# Development tools
+black>=21.5b2
+pylint>=2.8.0
+pytest>=6.2.5
+pytest-asyncio>=0.15.1
+pytest-cov>=2.12.0
+
+# Optional dependencies
+python-dotenv>=0.19.0
+colorama>=0.4.4
+tqdm>=4.62.0 
