🔒 Major Security & Functional Improvements
🔧 Security Fixes:
- Fixed subprocess shell=True vulnerabilities (BAN-B602)
- Replaced xml.etree with defusedxml for XXE protection (BAN-B314/BAN-B405)
- Added secure file permissions (0o600) for sensitive files (BAN-B103)
- Replaced hardcoded temp paths with tempfile module (BAN-B108)
- Fixed bare except statements with specific exceptions (FLK-E722)
- Added full executable paths in subprocess calls (BAN-B607)
- Enhanced subprocess error handling (PYL-W1510)

🚀 Functional Improvements:
- Added C library fallback mechanism for missing native modules
- Fixed AI pipeline prompt loading with proper error handling
- Enhanced reconnaissance module with better async/await patterns
- Improved screen control module with graceful fallbacks
- Fixed output directory handling and path conversion
- Added comprehensive error handling throughout the codebase

📦 Dependencies:
- Added defusedxml>=0.7.1 for secure XML parsing
- Updated requirements.txt with security dependencies

🛡️ Architecture:
- Multi-language support (Python, C++, Rust, Assembly, Bash)
- AI-powered screen control system
- Advanced AI pipeline with multi-step reasoning
- Modular design with clean separation of concerns

✅ All features tested and working:
- Core application functionality
- AI integration and pipeline
- Tool generation and management
- Reconnaissance and reporting
- Screen control with fallbacks
- Installation and setup scripts

This update significantly improves security, reliability, and functionality while maintaining backward compatibility.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,9 @@ pyyaml>=6.0
 requests>=2.26.0
 rich>=10.0.0
 
+# Security dependencies
+defusedxml>=0.7.1  # SECURITY: Safe XML parsing to prevent XXE attacks
+
 # Security tools
 dnspython>=2.1.0
 python-nmap>=0.7.1
